# RAG_test

./: .gitignore  Dockerfile  README.md  docker_compose.yaml  pyproject.toml
notebooks/: RAG1.ipynb  RAG_pipeline.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: RAG1-checkpoint.ipynb  RAG_pipeline-checkpoint.ipynb
notebooks/Bhavana/: RAG_BAAI.ipynb  RAG_HuggingfaceL6.ipynb  RAG_semantic.ipynb
notebooks/dhrv/: RAG_pipeline.ipynb  test.ipynb
notebooks/dhrv/.ipynb_checkpoints/: RAG_pipeline-checkpoint.ipynb  test-checkpoint.ipynb
