[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "jupyterlab>=4.4.5",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-perplexity>=0.1.2",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
]
