[project]
name = "rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "ijson>=3.4.0",
    "jupyterlab>=4.4.5",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "langchain-perplexity>=0.1.2",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "orjson>=3.11.2",
    "pandas>=2.3.1",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
